--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -45,7 +45,7 @@
                         <li class="s1">
                             <h4>희망포지션</h4>
                             <select th:field="*{mPosition}">
-                                <option value="" selected>포지션 선택</option>
+                                <option value="MULTI" selected>포지션 선택</option>
                                 <option value="MULTI">상관없음</option>
                                 <option value="ST">ST</option>
                                 <option value="MF">MF</option>
