--- a/src/main/resources/templates/member/adminMemberDetail.html
+++ b/src/main/resources/templates/member/adminMemberDetail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>memberDetail</title>
+    <title>adminMemberDetail</title>
     <link rel="stylesheet" th:href="@{/css/member/memberDetail.css}">
 </head>
 
@@ -15,12 +15,12 @@
             <div class="con">
                 <h2>회원상세</h2>
                 <div class="right-con">
-                    <div class="memberDetail">
+                    <div class="adminMemberDetail">
                         <div class="con2">
                             <div class="member">
                                 <div class="img">
                                     <span th:if="${memberDto.mAttach==1}">
-                                        <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px; object-fit: cover;" alt="">
+                                        <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px; background: no-repeat 50%/cover;" alt="">
                                     </span>
                                     <span th:unless="${memberDto.mAttach==1}">
                                         <img src="https://via.placeholder.com/300" alt="">
@@ -76,8 +76,9 @@
                                             <span class="detail" th:text="${memberDto.mIntro}"></span>
                                         </li>
                                         <li>
-                                            <button><a th:href="@{|/member/update/${memberDto.mId}|}">회원수정</a></button>
-                                            <button><a th:href="@{/member/delete}">회원탈퇴</a></button>
+                                            <button><a th:href="@{|/member/adminMemberUpdate/${memberDto.mId}|}">회원수정</a></button>
+                                            <button><a th:href="@{/member/memberList}">회원목록</a></button>
+                                            <button><a th:href="@{|/member/adminMemberDelete/${memberDto.mId}|}">회원삭제</a></button>
                                         </li>
                                     </ul>
                                 </div>
