결재서류 수정,삭제

--- a/src/main/resources/static/css/approval/listDetail.css
+++ b/src/main/resources/static/css/approval/listDetail.css
@@ -11,6 +11,7 @@
   /* justify-content:center; */
   /* gap: 5px; */
 
+
   margin-left: 320px
 }
 
@@ -32,9 +33,11 @@
   padding: 30px 20px;
   margin: 20px 20px;
 }
+
+/*결재선*/
 .container .approvalList .conform h3{
-  /* border: 1px solid #ff0000; */
- 
+  font-size: 18px;
+ margin: 10px 10px;
 }
 
 /*위에 박스*/
@@ -76,7 +79,13 @@ padding: 5px 0px;
 }
 
 .container .approvalList .conform .conformMain .sub2 .sub2-2{
-  padding: 45px 0px;
+  padding: 22px 0px;
+
+  border-bottom: 1px solid #4d4d4d3a;
+}
+
+.container .approvalList .conform .conformMain .sub2 .sub2-3{
+  padding: 12px 0px;
 }
 
 .container .approvalList .conform .conformMain .sub3{
@@ -96,15 +105,20 @@ padding: 5px 0px;
   height: 15%;
 }
 
+.container .approvalList .conform .conformMain .sub3 .sub3-3{
+  text-align: center;
+  font-weight: bold;
+}
+
 
 /* 밑에 박스 */
 .container .approvalListDetail{
-  width: 624px;
+  width: 100%;
+  padding-top: 20px;
   
-  border: 1px solid #4d4d4d3a;
+  /* border: 1px solid #4d4d4d3a; */
   box-sizing: border-box;
 }
-
 
 .container .approvalListDetail >ul{
   width: 100%;
@@ -120,4 +134,65 @@ padding: 5px 0px;
   /* border: 1px solid #eeff00; */
   box-sizing: border-box;
 
+  padding: 10px 10px;
+}
+
+.container .approvalListDetail ul li.division {
+
+}
+
+.container .approvalListDetail ul li.title {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+
+.container .approvalListDetail ul .sub1 {
+  display: flex;
+  justify-content: left;
+
+  padding: 10px 10px;
+}
+
+.container .approvalListDetail ul .line {
+  border-bottom: 1px solid #4d4d4d3a;
+  width: 80%;
+
+}
+
+.container .approvalListDetail ul .sub1 li.id {
+
+}
+
+.container .approvalListDetail ul .sub1 li.time {
+  margin: 0px 20px;
+}
+
+.container .approvalListDetail ul li.content {
+  margin: 10px 0px;
+}
+
+.container .approvalListDetail ul li.content .sub1{
+  margin: 0px 10px;
+}
+
+.container .approvalListDetail ul .fileparents li.file{
+  display: flex;
+  justify-content: left;
+
+  padding: 10px 10px;
+  margin: 10px 0px;
+}
+
+.container .approvalListDetail ul .fileparents li.file .filesub{
+  margin: 0px 10px;
+}
+
+.container .approvalListDetail ul li.file a{
+  color:#4a65ff
+}
+
+.container .approvalListDetail ul .move{
+  text-align: right;
+  margin: 10px 10px;
 }
