--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -47,6 +47,9 @@
                                 <li>
                                     <a th:href="@{/approval/list}">결재서류 리스트</a>
                                 </li>
+                                <li>
+                                    <!-- <a th:href="@{/approval/listUpdate}">결재서류 수정</a>-->
+                                </li>
                             </ul>
                         </li>
                         <li>
