--- a/src/main/resources/static/css/member/adminMemberUpdate.css
+++ b/src/main/resources/static/css/member/adminMemberUpdate.css
@@ -55,13 +55,14 @@
 .right-menu .right-con .con2 .member{
   width: auto;
   height: auto;
-  border: 1px solid black;
+  border: 1px solid #b9b9b9;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
   padding: 30px;
   box-sizing: border-box;
+  box-shadow: 5px 5px 5px 1px grey;
 }
 
 .right-menu .right-con .con2 .member .img span{
@@ -71,7 +72,7 @@
 }
 
 .right-menu .right-con .con2 .member .info{
-  border: 1px solid black;
+  border: 1px solid #b9b9b9;
   padding: 10px;
   box-sizing: border-box;
 
