--- a/src/main/resources/static/css/member/adminMemberList.css
+++ b/src/main/resources/static/css/member/adminMemberList.css
@@ -54,12 +54,13 @@ h2{
 }
 
 .right-menu .right-con .adminMemberList .memberInfo{
-  border: 1px solid red;
+  border: 1px solid #b9b9b9;
   padding: 5px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 5px 5px 5px 1px grey;
 }
 
 .right-menu .right-con .adminMemberList .memberInfo .top-menu{
@@ -89,7 +90,8 @@ h2{
   width: 1230px;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
+  border: 1px solid #b9b9b9;
+  box-shadow: 5px 5px 5px 1px grey;
 }
 
 .tools .page{
