--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,15 +28,53 @@
                         <div class="board">
                             <div class="notice">
                                 <h2>공지사항</h2>
-                                <div class="con2">
-                                    
-                                </div>
+                                <a th:href="@{#}">
+                                    <div class="con2">
+                                        <table>
+                                            <tr>
+                                                <th>No</th>
+                                                <th>제목</th>
+                                                <th>내용</th>
+                                                <th>조회수</th>
+                                                <th>작성일</th>
+                                            </tr>
+                                            <th:block th:each="notice : ${noticeList}">
+                                                <tr>
+                                                    <td th:text="${notice.noticeId}"></td>
+                                                    <td th:text="${notice.noticeTitle}"></td>
+                                                    <td th:text="${notice.noticeContent}"></td>
+                                                    <td th:text="${notice.noticeHit}"></td>
+                                                    <td th:text="${#temporals.format(notice.noticeCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                                </tr>
+                                            </th:block>
+                                        </table>
+                                    </div>
+                                </a>
                             </div>
                             <div class="community">
                                 <h2>게시판</h2>
-                                <div class="con2">
-                                    
-                                </div>
+                                <a th:href="@{/admin/boardList}">
+                                    <div class="con2">
+                                        <table>
+                                            <tr>
+                                                <th>No</th>
+                                                <th>제목</th>
+                                                <th>내용</th>
+                                                <th>조회수</th>
+                                                <th>작성일</th>
+                                            </tr>
+                                            <th:block th:each="board : ${boardList}">
+                                                <tr>
+                                                    <td th:text="${board.boardId}"></td>
+                                                    <td th:text="${board.boardTitle}"></td>
+                                                    <td th:text="${board.boardContent}"></td>
+                                                    <td th:text="${board.boardHit}"></td>
+                                                    <td th:text="${#temporals.format(board.boardCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                                </tr>
+                                            </th:block>
+                                        </table>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
