--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -56,10 +56,10 @@
                             <a href="#">조직관리</a>
                             <ul class="sub">
                                 <li>
-                                    <a href="#">팀추가</a>
+                                    <a th:href="@{/member/memberList}">팀목록</a>
                                 </li>
                                 <li>
-                                    <a href="#">팀조회</a>
+                                    <a th:href="@{/member/management}">팀조회</a>
                                 </li>
                                 <li>
                                     <a href="#">팀수정</a>
