--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -77,3 +77,29 @@ h2{
 }
 
 
+/* fullCalender */
+
+#content {
+  width: 80vw;
+  text-align: center;
+  margin: 0 auto
+}
+
+h1.title {
+  text-align: center;
+  background-color: #3788d8;
+  color: #ffffff;
+  padding: 10px 0;
+}
+
+#calendar {
+  width: 80vw;
+  height: 80vh;
+  margin: 0 auto
+}
+
+#calendarBox {
+  width: 70%;
+  padding-left: 15%;
+}
+
